# wsjtx-srv

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  connect.py  pyproject.toml  setup.py
wsjtx_srv/: .gitignore  __init__.py  wsjtx.py
